project collected in one folder